load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "migrations.go",
        "seeds.go",
    ],
    importpath = "github.com/pocockn/mono-repo/core/database-migrator",
    visibility = ["//visibility:private"],
    deps = [
        "//core/database-migrator/config:go_default_library",
        "//core/database-migrator/migrations:go_default_library",
        "//core/database-migrator/seeds:go_default_library",
        "//pkg/models/api/shouts:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/mysql:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_gormigrate_v1//:go_default_library",
    ],
)

go_binary(
    name = "database-migrator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
