load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pocockn/mono-repo/services/recs-api",
    visibility = ["//visibility:private"],
    deps = [
        "//services/recs-api/config:go_default_library",
        "//services/recs-api/persistance:go_default_library",
        "//services/recs-api/recs/delivery:go_default_library",
        "//services/recs-api/recs/store:go_default_library",
        "@com_github_labstack_echo_v4//:go_default_library",
        "@com_github_labstack_echo_v4//middleware:go_default_library",
    ],
)

go_binary(
    name = "recs-api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

apt_key(
    name = "apt_key",
    image = "golang:1.14.1-alpine3.11",
    cmd = [
        "--no-cache ca-certificates git",
    ],
)

go_image(
    name = "recs-api"
)


