load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["upload.go"],
    importpath = "github.com/pocockn/mono-repo/services/recs-api/services",
    visibility = ["//visibility:public"],
    deps = [
        "//services/recs-api/config:go_default_library",
        "@com_github_labstack_echo//:go_default_library",
        "@com_github_pocockn_awswrappers//s3:go_default_library",
    ],
)
