load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "player.go",
        "team.go",
    ],
    importpath = "github.com/pocockn/mono-repo/pkg/models/api/football",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jinzhu_gorm//:go_default_library"],
)
