load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/pocockn/mono-repo/services/spotify-poller/internals/database",
    visibility = ["//visibility:public"],
    deps = [
        "//services/spotify-poller/config:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/mysql:go_default_library",
        "@com_github_labstack_gommon//log:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
