load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["handler.go"],
    importpath = "github.com/pocockn/mono-repo/services/spotify-poller/internals/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models/api/recs:go_default_library",
        "//services/spotify-poller/internals:go_default_library",
        "//services/spotify-poller/internals/spotify:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_zmb3_spotify//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["handler_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/models/api/recs:go_default_library",
        "//services/spotify-poller/internals/store/mock:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_zmb3_spotify//:go_default_library",
    ],
)
