load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/pocockn/mono-repo/services/spotify-poller/internals/spotify",
    visibility = ["//visibility:public"],
    deps = [
        "//services/spotify-poller/config:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_zmb3_spotify//:go_default_library",
        "@org_golang_x_oauth2//clientcredentials:go_default_library",
    ],
)
