load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["store.go"],
    importpath = "github.com/pocockn/mono-repo/services/spotify-poller/internals/store/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models/api/recs:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
